--- a/src/core/styles/components/checkbox/_checkbox-theme.scss
+++ b/src/core/styles/components/checkbox/_checkbox-theme.scss
@@ -65,18 +65,18 @@
         $this: extend($dark-theme, $theme);
     }
 
-    $cbx-label-font-size: em(16px);
-    $cbx-size: em(20px);
-    $cbx-border-width: 2px;
-    $cbx-label-margin: em(8px);
-    $cbx-radius: 2px;
+    $label-font-size: em(16px);
+    $size: em(20px);
+    $border-width: 2px;
+    $label-margin: em(8px);
+    $radius: 2px;
 
-    $cbx-mark-stroke: 3;
-    $cbx-mark-length: 24;
-    $cbx-mark-x-factor: $cbx-mark-stroke / $cbx-mark-length;
+    $mark-stroke: 3;
+    $mark-length: 24;
+    $mark-x-factor: $mark-stroke / $mark-length;
 
-    $cbx-ripple-size: em(48px);
-    $cbx-ripple-radius: $cbx-ripple-size / 2;
+    $ripple-size: em(48px);
+    $ripple-radius: $ripple-size / 2;
 
     @include scale-in-center();
 
@@ -97,12 +97,12 @@
         position: relative;
         display: inline-block;
         cursor: pointer;
-        width: $cbx-size;
-        height: $cbx-size;
-        border-width: $cbx-border-width;
+        width: $size;
+        height: $size;
+        border-width: $border-width;
         border-style: solid;
         border-color: map-get($this, 'empty-color');
-        border-radius: $cbx-radius;
+        border-radius: $radius;
         -webkit-tap-highlight-color: transparent;
         transition: border-color .2s $ease-out-quad;
 
@@ -143,9 +143,9 @@
         left: 0;
         stroke: map-get($this, 'tick-color');
         stroke-linecap: square;
-        stroke-width: $cbx-mark-stroke;
-        stroke-dasharray: $cbx-mark-length;
-        stroke-dashoffset: $cbx-mark-length;
+        stroke-width: $mark-stroke;
+        stroke-dasharray: $mark-length;
+        stroke-dashoffset: $mark-length;
         fill: none;
         opacity: 0;
         z-index: 1;
@@ -161,13 +161,13 @@
     %cbx-composite-mark--in {
         stroke-dashoffset: 41; /* length of path - adjacent line length */
         opacity: 1;
-        transform: rotate(45deg) translateX(-#{$cbx-mark-x-factor}em);
+        transform: rotate(45deg) translateX(-#{$mark-x-factor}em);
     }
 
     %cbx-label {
         display: inline-block;
         color: map-get($this, 'label-color');
-        font-size: $cbx-label-font-size;
+        font-size: $label-font-size;
         line-height: 1;
         cursor: pointer;
         user-select: none;
@@ -179,11 +179,11 @@
     }
 
     %cbx-label-pos--after {
-        margin-left: $cbx-label-margin;
+        margin-left: $label-margin;
     }
 
     %cbx-label-pos--before {
-        margin-right: $cbx-label-margin;
+        margin-right: $label-margin;
         order: -1;
     }
 
@@ -196,11 +196,11 @@
             color: map-get($this, 'fill-color')
         ));
         position: absolute;
-        top: calc(50% - #{$cbx-ripple-radius});
-        left: calc(50% - #{$cbx-ripple-radius});
-        width: $cbx-ripple-size;
-        height: $cbx-ripple-size;
-        border-radius: $cbx-ripple-radius;
+        top: calc(50% - #{$ripple-radius});
+        left: calc(50% - #{$ripple-radius});
+        width: $ripple-size;
+        height: $ripple-size;
+        border-radius: $ripple-radius;
         overflow: hidden;
         pointer-events: none;
         filter: opacity(1);
