chore(checkbox): improve demos to show disabled ripple

--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -61,7 +61,7 @@
                     <igx-avatar src="images/avatar/8.jpg" roundShape="true">
                     </igx-avatar>
                     <span igxLabel>Petar Vasilev</span>
-                    <igx-checkbox [(ngModel)]="user.registered"></igx-checkbox>
+                    <igx-checkbox [(ngModel)]="user.registered" [disableRipple]="true"></igx-checkbox>
                 </div>
                 <div class="switch-sample">
                     <igx-avatar src="images/avatar/17.jpg" roundShape="true">
