Adding styles for grid summaries

--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -25,6 +25,7 @@
 @import '../components/dialog/dialog-component';
 @import '../components/grid/grid-component';
 @import '../components/grid-filtering/grid-filtering-component';
+@import '../components/grid-summary/grid-summary-component';
 @import '../components/icon/icon-component';
 @import '../components/input/input-component';
 @import '../components/list/list-component';
