--- a/demos/app/time-picker/sample.component.html
+++ b/demos/app/time-picker/sample.component.html
@@ -8,5 +8,19 @@
                 <igx-time-picker format="h:mm tt" ></igx-time-picker>
             </div>
         </article>
+        <article class="timepicker-column">
+            <h4 class="sample-title">Default Time Picker.</h4>
+            <p class="sample-description">Detailed description to be added.</p>
+            <div class="preview">
+                <igx-time-picker [vertical]="true" format="h:mm tt" ></igx-time-picker>
+            </div>
+        </article>
+        <article class="timepicker-column">
+            <h4 class="sample-title">24h Time format.</h4>
+            <p class="sample-description">Detailed description to be added.</p>
+            <div class="preview">
+                <igx-time-picker format="H:mm" ></igx-time-picker>
+            </div>
+        </article>
     </section>
 </div>
