--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <igx-grid #grid1 [data]="localData" [height]="'305px'" [autoGenerate]="true" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
+            <igx-grid #grid1 [data]="localData" [height]="'305px'" [autoGenerate]="true" (onColumnInit)="initColumns($event)" (onSelection)="selectCell($event)">
             </igx-grid>
 
         </article>
