--- a/demos/app/grid-column-pinning/sample.component.html
+++ b/demos/app/grid-column-pinning/sample.component.html
@@ -5,12 +5,12 @@
         </igx-column>
     </igx-grid>
     <br />
-    <button igxButton="raised" (click)="toggleColumn('ContactName')">Pin 'ContactName'</button>
-    <button igxButton="raised" (click)="toggleColumn('ContactTitle')">Pin 'ContactTitle'</button>
-    <button igxButton="raised" (click)="toggleColumn('CompanyName')">Pin 'CompanyName'</button>
-    <button igxButton="raised" (click)="toggleColumn('City')">Pin 'City'</button>
-    <button igxButton="raised" (click)="toggleColumn('Region')">Pin 'Region'</button>
-    <button igxButton="raised" (click)="toggleColumn('Address')">Pin 'Address'</button>
+    <button igxButton="raised" (click)="toggleColumn('ContactName')">Pin/Unpin 'ContactName'</button>
+    <button igxButton="raised" (click)="toggleColumn('ContactTitle')">Pin/Unpin 'ContactTitle'</button>
+    <button igxButton="raised" (click)="toggleColumn('CompanyName')">Pin/Unpin 'CompanyName'</button>
+    <button igxButton="raised" (click)="toggleColumn('City')">Pin/Unpin 'City'</button>
+    <button igxButton="raised" (click)="toggleColumn('Region')">Pin/Unpin 'Region'</button>
+    <button igxButton="raised" (click)="toggleColumn('Address')">Pin/Unpin 'Address'</button>
     <br/>
     <button igxButton="raised" (click)="toggleVisibility('ID')">Visibility 'ID'</button>
     <button igxButton="raised" (click)="toggleVisibility('ContactName')">Visibility 'ContactName'</button>
