--- a/src/core/styles/components/grid-summary/_grid-summary-theme.scss
+++ b/src/core/styles/components/grid-summary/_grid-summary-theme.scss
@@ -1,25 +1,22 @@
 ////
 /// @group themes
 /// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
-///
 /// @param {Color} $background-color [null] - The summaries background color.
 /// @param {Color} $label-color [null] - The summaries label color.
-/// @param {Color} $result-color [null] - The summaries label value/result color.
+/// @param {Color} $result-color [null] - The summaries value/result color.
 /// @param {Color} $border-color [null] - The summaries border color.
 /// @param {Color} $inactive-color [null] - The summaries inactive label color color.
 ///
-///
-/// @requires text-contrast
-///
 /// @example scss Change the summaries background nad labels color
 ///   $my-summary-theme: igx-grid-summary-theme(
-///     $$background-color: black,
+///     $background-color: black,
 ///     $label-color: white
 ///   );
 ///   // Pass the theme to the igx-grid-filtering component mixin
-///   @include igx-grid-summary($my-filtering-theme);
+///   @include igx-grid-summary($my-summary-theme);
 
 @function igx-grid-summary-theme(
     $background-color: null,
@@ -39,9 +36,9 @@
 
 /// @param {Map} $theme - The theme used to style the component.
 /// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires {mixin} igx-grid-summary
 /// @requires igx-grid-summary-theme
 /// @requires igx-color
+
 @mixin igx-grid-summary($theme, $palette: $default-palette) {
     $default-theme: igx-grid-summary-theme(
         $background-color: white,
