--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,3 +1,8 @@
 <ng-template igxFor let-col [igxForOf]="columns" [igxForScrollContainer]="grid.parentVirtDir" let-colIndex="index" [igxForScrollOrientation]="'horizontal'" [igxForContainerSize]='grid.calcWidth' #igxDirRef>
-    <igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+    <ng-container *ngIf="col.isColumnGroup">
+        <igx-grid-cell *ngFor="let child of col.descendants" [column]="child" [row]="this" [style.min-width.px]="child.width" [value]="rowData[child.field]" [cellTemplate]="child.bodyTemplate"></igx-grid-cell>
+    </ng-container>
+    <ng-container *ngIf="!col.isColumnGroup">
+        <igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+    </ng-container>
 </ng-template>
