refactor(calendar): improve calendar theme styles for responsiveness

--- a/src/calendar/calendar.component.html
+++ b/src/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <ng-template let-result #defaultHeader>
-    <span class="date-text">{{ getFormattedDate().weekday }},</span>
+    <span class="date-text">{{ getFormattedDate().weekday }},&nbsp;</span>
     <span class="date-text">{{ getFormattedDate().monthday }}</span>
 </ng-template>
 
