feat(input-group): add initial theme styles

--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -27,6 +27,7 @@
 @import '../components/grid-filtering/grid-filtering-component';
 @import '../components/icon/icon-component';
 @import '../components/input/input-component';
+@import '../components/input/input-group-component';
 @import '../components/list/list-component';
 @import '../components/navbar/navbar-component';
 @import '../components/navdrawer/navdrawer-component';
