--- a/src/core/styles/themes/_index.scss
+++ b/src/core/styles/themes/_index.scss
@@ -31,6 +31,7 @@
 @import '../components/navdrawer/navdrawer-theme';
 @import '../components/list/list-theme';
 @import '../components/input/input-theme';
+@import '../components/input/input-group-theme';
 @import '../components/icon/icon-theme';
 @import '../components/grid-filtering/grid-filtering-theme';
 
@@ -55,6 +56,7 @@
 /// @requires {mixin} igx-grid-filtering
 /// @requires {mixin} igx-icon
 /// @requires {mixin} igx-input
+/// @requires {mixin} igx-input-group
 /// @requires {mixin} igx-list
 /// @requires {mixin} igx-navbar
 /// @requires {mixin} igx-navdrawer
@@ -120,6 +122,9 @@
     }
     @if not(index($exclude, 'igx-icon')) {
         @include igx-icon($theme: (), $palette: $palette);
+    }
+    @if not(index($exclude, 'igx-input-group')) {
+        @include igx-input-group($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-form-group')) {
         @include igx-input($theme: (), $palette: $palette);
