Add scroll offset for igxVirtFor depending on scroll position.

--- a/src/core/styles/components/_common/_igx-vhelper.scss
+++ b/src/core/styles/components/_common/_igx-vhelper.scss
@@ -5,8 +5,10 @@
 
 %vhelper--vertical {
     width: 18px;
-    height: calc(100% + 18px) !important;
-    float: right;
+    height: 100% !important;
+    position: absolute;
+    right: 0px;
+    z-index: 10;
 }
 
 %vhelper--horizontal {
