--- a/src/core/styles/components/_common/_igx-display-container.scss
+++ b/src/core/styles/components/_common/_igx-display-container.scss
@@ -1,9 +1,8 @@
-%display-container {
+﻿%display-container {
     display: inherit;
     position: relative;
     float: left;
     width: calc(100% - 18px);
-    height: calc(100% - 18px);
     overflow: hidden;
 }
 
