Improved input group validation.

--- a/demos/app/input-group/input-group.component.html
+++ b/demos/app/input-group/input-group.component.html
@@ -25,7 +25,7 @@
                 <igx-icon name="email"></igx-icon>
             </igx-prefix>
             <label igxLabel>Email address</label>
-            <input igxInput type="email" required />
+            <input igxInput type="email" required="required" />
         </igx-input-group>
 
         <!-- Text field w/ icon suffix and hint at the beginning  -->
