Added input group with type search.

--- a/demos/app/input-group/input-group.component.html
+++ b/demos/app/input-group/input-group.component.html
@@ -115,4 +115,12 @@
             <igx-suffix><igx-icon name="phone"></igx-icon></igx-suffix>
         </igx-input-group>
     </form>
+
+    <form class="form">
+        <!-- Search text field -->
+        <igx-input-group type="search">
+            <label igxLabel>Text Field</label>
+            <input igxInput />
+        </igx-input-group>
+    </form>
 </div>
