--- a/demos/app/grid-summaries/sample.component.html
+++ b/demos/app/grid-summaries/sample.component.html
@@ -1,4 +1,4 @@
-<igx-grid #grid1 [data]="data" [autoGenerate]="false" height="800px" width="800px" (onColumnInit)="initColunm($event)" [paging]="false">
+<igx-grid #grid1 [data]="data" [autoGenerate]="false" height="800px" width="1000px" (onColumnInit)="initColunm($event)" [paging]="false">
     <igx-column field="ProductID" header="Product ID" width="200px" [headerClasses]="'prodId'">
         <ng-template igxCell let-cell="cell" let-val>
         <button (click)="viewRecord(grid1.data)">{{val}}</button>
@@ -38,3 +38,4 @@
 <button (click)="deleteRow()">Delete Row</button>
 <button (click)="updateCell()">Update Cell</button>
 <button (click)="updateRow()">Update Row</button>
+<button (click)="pin()">Pin</button>
