Fix resizer calc height and remove cursor from grid.component.ts

--- a/src/grid/grid-header.component.html
+++ b/src/grid/grid-header.component.html
@@ -11,6 +11,6 @@
 <span (dblclick)="onResizeAreaDblClick()"
       (mouseover)="onResizeAreaMouseOver()"
       (mousedown)="onResizeAreaMouseDown($event)"
-      [style.cursor]="cursor" 
-      style="display: flex;background-color: rgba(163, 163, 163, 0.082);position: absolute;height: 100%;right:0%;width: 8px;">
+      [style.cursor]="cursor"
+      style="display: flex;position: absolute;height: 100%;right:0%;width: 5px;">
 </span>
