Fix for issue #816 - When grid width is in % horizontal scrollbar with pinning does not position correctly.

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -262,6 +262,7 @@
         display: flex;
         flex-flow: row nowrap;
         grid-row: 3;
+        width: 100%;
         background: igx-color($palette, 'grays', 100);
     }
 
